# zenith

./: README.md  io.github.lo2dev.Zenith.json  meson.build
data/: io.github.lo2dev.Zenith.desktop.in  io.github.lo2dev.Zenith.gschema.xml  io.github.lo2dev.Zenith.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  preferences.blp  preferences.py  style.css  window.blp  window.py  window.ui  zenith.gresource.xml  zenith.in
